# doge

./: .gitmodules  Cargo.toml  Dockerfile  LICENCE  README.md  makefile
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml
dns/: Cargo.toml
dns-transport/: Cargo.toml
dns-transport/src/: auto.rs  error.rs  https.rs  lib.rs  tcp.rs  tls.rs  udp.rs
src/: connect.rs  hints.rs  main.rs  options.rs  output.rs  requests.rs  resolve.rs  table.rs
