[package]
name = "dns-doge"
description = "A command-line DNS client"

authors = ["Darrion Whitfield <dwhitfield@ramfield.net>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md", "/.rustfmt.toml", "/.travis.yml", "/makefile",
]
homepage = "https://dns.lookup.dog/"
license = "MIT"

version = "0.2.5"


[[bin]]
name = "doge"
path = "src/main.rs"
doctest = false


#[workspace]
#members = [
#  "dns-transport",
#]


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = true

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
overflow-checks = true
panic = "abort"


[dependencies]

# dns stuff
doge_dns = "1.0.1"
doge_transport = "0.2.4"

# command-line
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"

# transaction ID generation
rand = "0.8"

# json output
json = "0.12"

# logging
log = "0.4"

# windows default nameserver determination
[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3" }

[build-dependencies]
datetime = { version = "0.5.1", default_features = false }

[dev-dependencies]
pretty_assertions = "0.7"

[features]
default = ["with_idna", "with_tls", "with_https", "with_nativetls"]
with_idna = ["doge_dns/with_idna"]

with_tls = ["doge_transport/with_tls"]
with_https = ["doge_transport/with_https"]

with_nativetls = ["doge_transport/with_nativetls"]
with_nativetls_vendored = ["with_nativetls", "doge_transport/with_nativetls", "doge_transport/with_nativetls_vendored"]
with_rustls = ["doge_transport/with_rustls"]
